CHANGES
-------

The major number changes for such things as code rewrites, changes in
syntax, and/or dramatic changes in functionality. The minor number
changes for corrections, enhancements, etc. made to the code. There
is no set schedule for releases.

--TODO--


--0.15--

   !	Assert unlimited (-1) default for milter-limit-rcpt-connect and
	milter-limit-rcpt-connect.

--0.14--

   !	Silence 64-bit compiler warnings about signedness of arg 2
   	to DataInitWithBytes() calls.

   +	Added milter-limit-rcpt-connect:, milter-limit-rcpt-from:, and
   	milter-limit-rcpt-auth: tag to impose per message recipient
   	limits. Commissioned by Lewis Bergman.

   !	Rephrased the milter-limit tag descriptions.

--0.13--

   +	Requires LibSnert 1.63

   !	Replaced test whether {if_addr} macro is undefined, ie. localhost
	with isReservedIP(IS_IP_LOCALHOST) instead since Postfix 2.3
	does not support the {if_addr} macro and so is always undefined.

   !	Fix typo error in default setting of count-null-sender which
   	should have been a hyphen (-), not underscore (_). On a QWERTY
   	keyboard they are on the same key. Doh!

  !!	The precedence order for the milter-limit tags has been changed
  	in order to allow more intuitive overrides of the general to the
  	specific. The precedence is now highest to lowest:

  		milter-limit-auth
  		milter-limit-to
  		milter-limit-from
  		milter-limit-connect

  	The impact of this means that all rejection happen at RCPT TO:
  	time instead of MAIL FROM: (connect, auth, from) and RCPT TO:

  	The reason for changing was that the previous behaviour for
  	something like:

		milter-limit-Connect:   		500/1d
		milter-limit-From:user@example.com      5000/1d

  	would reject based on the milter-limit-connect: tag, ignoring
  	the possibility to override with milter-limit-from: or other
  	tags. Requested by Michael Long.

   !	atExitCleanUp(): added NULL guard around cache cleanup code in
   	case its the cache was not initialised.
