@@ -2,7 +2,7 @@
 #	Thus it begins...
 #######################################################################
 
-AC_INIT(milter-limit, 0.14, [Anthony Howe <achowe@snert.com>])
+AC_INIT(milter-limit, 0.15, [Anthony Howe <achowe@snert.com>])
 
 dnl The autoconf version I learned to deal with.
 AC_PREREQ(2.59)
